# file-manager

./: .env.example  README.md  docker-compose.prod.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-09-03_initial.py  2025-09-04_init_models.py  2025-09-05_add_departments_and_users.py  2025-09-05_add_files_and_metadata.py
scripts/: seed.py
src/: config.py  database.py  exceptions.py  main.py  tasks.py
src/auth/: constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
src/files/: constants.py  exceptions.py  models.py  router.py  s3.py  schemas.py  service.py  utils.py
src/users/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
